--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "sequelize": "^6.37.7"
